--- a/ws2812/Makefile
+++ b/ws2812/Makefile
@@ -1,14 +1,14 @@
-PROJECT = blink-test
+PROJECT = ws2812
 BUILD_DIR = bin
 
 SHARED_DIR = ../common
-CFILES = blink-test.c
+CFILES = ws2812.c
 CFILES += api.c
 AFILES += api-asm.S
 
 # TODO - you will need to edit these two lines!
 DEVICE=stm32f411CEU6
-OOCD_FILE =
+# OOCD_FILE = target/stm32f4x
 
 # You shouldn't have to edit anything below here.
 VPATH += $(SHARED_DIR)
